allowed-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: org-allowed-registries
  annotations:
    policies.kyverno.io/title: Organization Allowed Registries
    policies.kyverno.io/category: My Org
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      For my org, we only want images to come from GitHub Container Registry (GHCR)
      or our internal enterprise Harbor registry.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: org-registries
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Images may only come from ghcr.io or harbor2.zoller.com."
      pattern:
        spec:
          containers:
          - image: "ghcr.io/* | harbor2.zoller.com/*"
