cert-man-issuer.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cert-manager-restrict-issuer
  annotations:
    policies.kyverno.io/title: Restrict issuer
    policies.kyverno.io/category: Cert-Manager
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Certificate
    policies.kyverno.io/description: >-
      Certificates for trusted domains should always be steered to a controlled issuer to
      ensure the chain of trust is appropriate for that application. Users may otherwise be
      able to create their own issuers and sign certificates for other domains. This policy
      ensures that a certificate request for a specific domain uses a designated ClusterIssuer.      
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: restrict-corp-cert-issuer
    match:
      any:
      - resources:
          kinds:
          - Certificate
    validate:
      message: When requesting a cert for this domain, you must use our corporate issuer.
      pattern:
        spec:
          (dnsNames): ["*.corp.com"]
          issuerRef:
            name: our-corp-issuer
            kind: ClusterIssuer
            group: cert-manager.io
